--- a/eda-with-pandas/exercises/exercise-with-pandas.ipynb
+++ b/eda-with-pandas/exercises/exercise-with-pandas.ipynb
@@ -17,7 +17,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import the pandas library and use the alias 'pd'\n"
+    "# import the pandas library and use the alias 'pd'\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -318,7 +319,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
