--- a/cleaning-data-with-pandas/exercises/PandasCleaningTechniques.ipynb
+++ b/cleaning-data-with-pandas/exercises/PandasCleaningTechniques.ipynb
@@ -18,8 +18,9 @@
    "outputs": [],
    "source": [
     "# Import pandas and any other libraries you need here.\n",
-    "\n",
-    "# Create a new dataframe from your CSV"
+    "import pandas as pd\n",
+    "# Create a new dataframe from your CSV\n",
+    "print(\"hello\")"
    ]
   },
   {
@@ -28,7 +29,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Print out any information you need to understand your dataframe\n"
+    "# Print out any information you need to understand your dataframe\n",
+    "print('excel')\n",
+    "print('excel')\n",
+    "print('excel')\n",
+    "print('excel')\n",
+    "print('excel')\n"
    ]
   },
   {
